--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,9 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
-    "knex": "^0.20.13",
-    "sqlite3": "^4.1.1",
-    "nodemon": "^2.0.3"
+    "knex": "^0.20.15",
+    "nodemon": "^2.0.3",
+    "sqlite3": "^4.1.1"
   },
   "devDependencies": {}
 }
